@@ -28,8 +28,7 @@
   </modules>
   
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <aggregate.report.dir>morf-integration-test/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
 
@@ -60,7 +59,7 @@
     <junitparams.version>1.0.4</junitparams.version>
     <jxl.version>2.6.12</jxl.version>
     <log4j.version>1.2.15</log4j.version>
-    <mockito.version>3.9.0</mockito.version>
+    <mockito.version>5.4.0</mockito.version>
     <ognl.version>2.6.9</ognl.version>
     <serializer.version>2.7.1</serializer.version>
     <xmlunit.version>2.6.4</xmlunit.version>
@@ -114,6 +113,9 @@
             <systemPropertyVariables>
               <log4j.configuration>file:${basedir}/../etc/log4j-maven.properties</log4j.configuration>
             </systemPropertyVariables>
+            <argLine>
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
